# eli

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.py
src/botbot/: __init__.py  __main__.py  app.py
src/eli/: __init__.py  config.py  configurable.py  eli.py  profile.py  profiles.py  ui.py
src/eli/ui/: __init__.py  console.py  debug.py  home.py  input.py  qanda.py  screen.py  settings.py  switch.py  terminalinterface.css  ui.py
src/quandary/: __init__.py
src/quandary/app/: mode.py  mode_test.py  modelangchain.py  response.py  response_test.py  utils.py
src/quandary/app/logging/: __init__.py  logging.py
src/quandary/app/options/: __init__.py  option.py
src/quandary/app/profiles/: __init__.py  profile.py
src/quandary/ui/: app.py  components.py  terminalinterface.css
src/quandary/ui/widgets/: DebugPanel.py  DebugTab.py  InputPanel.py  NavigationTabs.py  ResponsePanel.py  ResponseTab.py  SettingsTab.py  SwitchSetting.py  __init__.py
