[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quandary"
version = "0.0.1"
dependencies = [
    "python-dotenv",
    "llama-index",
    "openai",
    "argparse",
    "textual"
]

[project.scripts]
quandary = "quandary:start_tui"

[tool.setuptools.packages.find]
where = ["src"]